Introduzco estilos de Material

--- a/src/app/public/header/header.component.html
+++ b/src/app/public/header/header.component.html
@@ -1,5 +1,5 @@
-<p>header works!</p>
-<button [routerLink]="'home'"> Home </button> 
-<button [routerLink]="'articles'" (click)="irAlForo"> Ir al Foro </button> 
-<button [routerLink]="'/loginPage'"> Login </button> 
-<button [routerLink]="'registerPage'"> Sing Up </button>
+
+<button [routerLink]="'home'" mat-button color="primary"> Home </button> 
+<button [routerLink]="'articles'" (click)="irAlForo" mat-button> Ir al Foro </button> 
+<button [routerLink]="'/loginPage'" mat-button> Login </button> 
+<button [routerLink]="'registerPage'" mat-button> Sing Up </button>
