--- a/src/app/public/register/register.component.html
+++ b/src/app/public/register/register.component.html
@@ -4,4 +4,4 @@
     <input formControlName="newPass" type="password"> Password
 </form> 
 
-<button (click)="createUser()"> Crear Usuario </button>
+<button (click)="createUser()" mat-risen-button color="primary"> Crear Usuario </button>
