--- a/src/app/public/header/header.component.html
+++ b/src/app/public/header/header.component.html
@@ -1,5 +1,6 @@
 
-<button [routerLink]="'home'" mat-button color="primary"> Home </button> 
-<button [routerLink]="'articles'" (click)="irAlForo" mat-button> Ir al Foro </button> 
-<button [routerLink]="'/loginPage'" mat-button> Login </button> 
-<button [routerLink]="'registerPage'" mat-button> Sing Up </button>
+<button [routerLink]="'home'" mat-raised-button color="primary"> Home </button> 
+<button [routerLink]="'articles'" (click)="irAlForo" mat-stroked-button color="primary"> Ir al Foro </button> 
+<button [routerLink]="'/loginPage'" mat-stroked-button color="primary"> Login </button> 
+<button [routerLink]="'registerPage'" mat-stroked-button color="primary"> Sing Up </button>
+
