--- a/src/app/foro/articles/articles.component.css
+++ b/src/app/foro/articles/articles.component.css
@@ -8,5 +8,11 @@ button {
     margin: 5px;
 } 
 #buscador { 
-    margin-top: 30px;
-}
+    margin-top: 30px; 
+    border: 1px rgb(207, 207, 207);
+} 
+#buscador mat-form-field { 
+    margin: auto; 
+    padding: 5px; 
+    width: 50%; 
+} 
