--- a/src/app/foro/articles/articles.component.css
+++ b/src/app/foro/articles/articles.component.css
@@ -7,12 +7,16 @@ mat-card {
 button { 
     margin: 5px;
 } 
-#buscador { 
+form { 
+    margin: auto;
     margin-top: 30px; 
     border: 1px rgb(207, 207, 207);
 } 
 #buscador mat-form-field { 
     margin: auto; 
     padding: 5px; 
-    width: 50%; 
+    width: 30%; 
 } 
+mat-spinner { 
+    margin: auto;
+}
