--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -1,4 +1,4 @@
 
 <h3> Bienvenido </h3> 
 
-<h4 [routerLink]="'articles'" (click)="irAlForo" > Ingresar al Foro </h4>
+<button mat-flat-button [routerLink]="'/articles'" (click)="irAlForo()" > Ingresar al Foro </button>
