Mejora al cargar un nuevo comentario

--- a/src/app/foro/articles/an-article/an-article.component.html
+++ b/src/app/foro/articles/an-article/an-article.component.html
@@ -25,8 +25,8 @@
         <br>
         <button (click)= "commentArticle()" mat-raised-button color="accent"> Comentar </button>
 </mat-card>
-
-<ul *ngIf="showComments">
+<mat-spinner *ngIf="loadingComments"></mat-spinner>
+<ul *ngIf="showComments"> 
     <li *ngFor="let item of listOfComments"> 
         <mat-card>
             <h5>{{item.author.username}}</h5> 
